version 1.22.0

1. Moved Payment Adjustment menu item to new Sales Payments sub-menu
2. Added Purchase Return / Good Stock
3. Added Purchase Payment Adjustment Type
4. Revised Supplier Payment Adjustment to use new Purchase Payment Adjustment Type

version 1.21.1

1. Added Total Bank Transfers field to Supplier Payment screen
2. Display total amount of Supplier Payment Receiving Receipts with VAT

version 1.21.0

1. Added Supplier Payment Bank Transfer
2. Added Maintain Credit Card screen
3. Added generation of Excel spreadsheet from Sales Invoice
4. Revised Supplier Payment Credit Card Payments to use new Credit Card fields

version 1.20.1

1. Fixed updating of Supplier Payment
2. Added posting of Supplier Payment
3. Added search Supplier Payment function
4. Removed Amount column from Supplier Payments list

[TODO: Put past changes here]

version 1.7.4

1. Make new customers active by default
2. Added Sales Returns to Posted Sales and Profit Report
3. Added post Purchase Order validation that Payment Term must be specified
4. Added Post Date column in Sales Return list
5. Fixed Total Amount in Sales Return list

version 1.7.3

1. Fixed doubled totals fields values for Adjustment In/Out, Stock Conversion, Area Inventory Report 

version 1.7.2

1. Fixed bug where sales invoices in a cancelled payment cannot be picked up by a new payment

version 1.7.1

1. Fixed Customer search bug (names like criteria not fetched)

version 1.7.0

1. Added Encoder to Payment model
2. Renamed Payment screen titles
3. Added cancelling payment instead of delete
4. Added disabling customers
5. Increased font size of submenus
5. Allowed changing SI number of Sales Return

version 1.6.0

1. Added Backup and Restore Data function
2. Added Sales Return to Stock Card Inventory Report
3. Fixed bug where displayed items get doubled
4. Organized menu items

version 1.5.1

1. Added Time Period criteria to Paid Sales Invoices list

version 1.5.0
