@@ -4,6 +4,7 @@ version 1.22.0
 2. Added Purchase Return / Good Stock
 3. Added Purchase Payment Adjustment Type
 4. Revised Supplier Payment Adjustment to use new Purchase Payment Adjustment Type
+5. Added adding Purchase Return - Good Stock to Supplier Payment
 
 version 1.21.1
 
